Updated some additional input types.